--- a/client/public/index.css
+++ b/client/public/index.css
@@ -19,12 +19,14 @@ body {
 	display: flex;
 	flex-direction: column;
  
-	white-space: pre-wrap;
+	white-space: pre-wrap; 
 }
 
 .note-header{
-  display: flex;
+  display: inline-flex;
   justify-content: center;
+  margin-bottom: 3px;
+  
 }
 .note-line {
  
@@ -35,6 +37,27 @@ body {
   
  
 
+}
+.note-content {
+
+  display: inline-flex;
+	flex-direction: column;
+  min-height: 170px;
+  max-height: 750px;
+}
+.note-text-area{
+
+  width: 100%;
+  height: 90%;
+  padding: 5px 10px ;
+  box-sizing:border-box;
+  margin-bottom: 10px;
+  overflow-y: hidden;
+  background: transparent;
+  font-size: 16px;
+  resize:none;
+  outline: none;
+  border: 0 none;
 }
 
 .board {
@@ -50,5 +73,19 @@ body {
   position:absolute;
  
   right: 10px;
+
+  height: 18px;
   
+}
+
+
+.AddNoteBar-container{
+  display: flex;
+  flex-direction: row;
+  z-index: 99;
+  position: fixed;
+   bottom: 0 ;
+   left: 50%;
+   margin-left: -250px;  /* Negative half of width. */
+
 }
