--- a/client/public/index.css
+++ b/client/public/index.css
@@ -4,6 +4,58 @@ body {
 }
 
 
+.home-wrapper{
+
+  display: flex;
+  flex-direction: column;
+}
+
+
+.sidebar-Header{
+ 
+  display: inline-flex;
+  justify-content: center;
+  margin-bottom: 3px;
+}
+
+
+
+.green-Note
+{
+  filter: invert(84%) sepia(63%) saturate(296%) hue-rotate(75deg) brightness(96%) contrast(93%);
+
+}
+
+.blue-Note
+{
+  filter: invert(63%) sepia(63%) saturate(274%) hue-rotate(178deg) brightness(96%) contrast(91%);
+
+}
+
+.purple-Note
+{
+  filter: invert(88%) sepia(14%) saturate(3946%) hue-rotate(238deg) brightness(93%) contrast(98%);
+
+}
+
+.red-Note
+{
+  filter: invert(71%) sepia(22%) saturate(596%) hue-rotate(314deg) brightness(92%) contrast(117%);
+}
+
+.yellow-Note
+{
+  filter: invert(100%) sepia(25%) saturate(5167%) hue-rotate(312deg) brightness(114%) contrast(105%);
+  
+}
+.sidebar-header-image{
+  position:absolute;
+ 
+  right: 10px;
+
+  height: 18px;
+}
+
 
 
 
@@ -20,6 +72,7 @@ body {
 	flex-direction: column;
  
 	white-space: pre-wrap; 
+
 }
 
 .note-header{
@@ -27,6 +80,14 @@ body {
   justify-content: center;
   margin-bottom: 3px;
   
+}
+.note-title
+{
+  background: transparent;
+  font-size: 16px;
+  
+  outline: none;
+  border: 0 none;
 }
 .note-line {
  
@@ -87,5 +148,5 @@ body {
    bottom: 0 ;
    left: 50%;
    margin-left: -250px;  /* Negative half of width. */
-
+  background-color: #F2F2F2;
 }
