--- a/client/public/index.css
+++ b/client/public/index.css
@@ -1,12 +1,18 @@
 /* Add CSS styles here! */
-body {
+html,
+body,
+#root {
+  margin: 0;
   background: #1c1917;
   font-family: sans-serif;
+  height: 100vh;
+  width: 100vw;
 }
-
 .home-wrapper {
+  height: 100%;
+  min-height: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .sidebar-Header {
@@ -53,9 +59,10 @@ body {
   padding-left: 1rem;
   padding-right: 1rem;
   padding-top: 0.5rem;
-  min-height: 170px;
-  min-width: 170px;
-
+  min-height: 300px;
+  min-width: 300px;
+  max-height: 300px;
+  max-width: 300px;
   display: flex;
   flex-direction: column;
 
@@ -64,7 +71,9 @@ body {
 
 .note-header {
   display: inline-flex;
-  justify-content: center;
+  justify-content: space-between;
+  justify-items: center;
+  align-items: center;
   margin-bottom: 3px;
 }
 .note-title {
@@ -83,18 +92,19 @@ body {
 .note-content {
   display: inline-flex;
   flex-direction: column;
-  min-height: 170px;
-  max-height: 750px;
+  min-height: 80%;
+  max-height: 80%;
 }
 .note-text-area {
   width: 100%;
   height: 90%;
+  max-height: 90%;
   padding: 5px 10px;
   box-sizing: border-box;
   margin-bottom: 10px;
-  overflow-y: hidden;
+  overflow-y: auto;
   background: transparent;
-  font-size: 16px;
+  font-size: 18px;
   resize: none;
   outline: none;
   border: 0 none;
@@ -102,15 +112,24 @@ body {
 
 .board {
   display: grid;
-  grid-gap: 1rem;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  row-gap: 1rem;
+  column-gap: 1rem;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
+
+.board-wrapper {
+  padding: 40px 20px 20px 40px;
+  width: 100%;
+  height: 100%;
 }
 .delete-btn {
-  position: absolute;
+  height: 24px;
+  width: 24px;
+}
 
-  right: 10px;
-
-  height: 18px;
+.save-btn {
+  height: 24px;
+  width: 24px;
 }
 
 .AddNoteBar-container {
@@ -119,7 +138,8 @@ body {
   z-index: 99;
   position: fixed;
   bottom: 0;
+  margin-bottom: 20px;
   left: 50%;
-  margin-left: -250px; /* Negative half of width. */
-  background-color: #f2f2f2;
+  margin-left: -7.5%; /* Negative half of width. */
+  background-color: #1c1917;
 }
